tests/ui/enum_ignore_others_type.stderr
error: fixcol-derive error: Expected true or false for ignore_others.
  --> tests/ui/enum_ignore_others_type.rs:10:26
   |
10 | #[fixcol(ignore_others = 1)]
   |                          ^
